--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link active-nav"
+        <a href="/index.html" class="link"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
           </div></a
         >
-        <a href="/about.html" class="link"
+        <a href="/about.html" class="link active-nav"
           ><i class="image fas fa-user fa-2x"></i>
           <div class="overlay">
             <div class="text">ABOUT</div>
@@ -38,7 +38,7 @@
             <div class="text">SKILLS</div>
           </div></a
         >
-        <a href="/work.html" class="link"
+        <a href="work.html" class="link"
           ><i class="fas fa-eye fa-2x"></i>
           <div class="overlay">
             <div class="text">MY WORK</div>
@@ -77,55 +77,35 @@
       <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
       <div class="text-zone">
         <h1 aria-label=" Hi, I’m Simranjeet,web developer." class="blast-root">
-          <span class="blast" style="opacity: 1;">H</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">I</span
-          ><span class="blast" style="opacity: 1;">’</span
-          ><span class="blast" style="opacity: 1;">m</span>
-          <span class="Slast" style="opacity: 1;">S</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">m</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">a</span
-          ><span class="blast" style="opacity: 1;">n</span
-          ><span class="blast" style="opacity: 1; padding-left: 3px;">j</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">t</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">w</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">b</span>
-          <span class="blast" style="opacity: 1;">d</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">v</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">l</span
-          ><span class="blast" style="opacity: 1;">o</span
-          ><span class="blast" style="opacity: 1;">p</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">.</span>
+          <span class="blast" style="opacity: 1; color: #23ffde;">A</span
+          ><span class="blast" style="opacity: 1; color: #23ffde;">b</span
+          ><span class="blast" style="opacity: 1; color: #23ffde;">o</span
+          ><span class="blast" style="opacity: 1; color: #23ffde;">u</span
+          ><span class="blast" style="opacity: 1; color: #23ffde;">t</span>
+          <span class="blast" style="opacity: 1; color: #23ffde;">m</span
+          ><span class="blast" style="opacity: 1; color: #23ffde;">e</span>
         </h1>
-        <h2>Full Stack Developer / Python Programmer / Freelancer</h2>
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/smrnjeet222/">
-            <i class="fab fa-linkedin fa-3x"></i>
-          </a>
-          <a href="https://github.com/smrnjeet222">
-            <i class="fab fa-github fa-3x"></i>
-          </a>
-          <a href="https://leetcode.com/smrnjeet222/">
-            <i class="fa fa-code fa-3x"></i>
-          </a>
-          <a href="https://smrnjeet-22.itch.io/">
-            <i class="fab fa-itch-io fa-3x"></i>
-          </a>
-        </div>
+        <p
+          align="LEFT"
+          style="color: aliceblue; width: 70%; font-size: 1rem; margin: 2rem 0;"
+        >
+          A skilled and knowledgeable computer science student with extensive
+          knowledge of <strong>programming</strong> and
+          <strong>computer applications</strong> . 👨‍💻<br /><br />
+          Well-organised enthusiastic person, problem solver and, a fan of
+          music, Outdoor Sports, TV series and, recently, Gaming.<br /><br />
+          Interested in the development spectrum and actively looking for an
+          opportunity in the field of Software Engineering.<br /><br />
+          Follow me on
+          <a
+            href="https://www.instagram.com/smrnjeet_22/"
+            style="color: #23ffde;"
+            >Instagram </a
+          >to know more or just
+          <a href="/contact.html" style="color: #23ffde;">contact </a>me.
+        </p>
       </div>
-
-      <span class="tags bottom-tags">
+      <span class="tags bottom-tags" style="bottom: 10px;">
         &nbsp;&nbsp;&nbsp;&lt;/body&gt;<br />
         &lt;/html&gt;
       </span>
@@ -144,7 +124,6 @@
         );
       }
     </script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(".blast").mouseover(function () {
