--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link active-nav"
+        <a href="/index.html" class="link"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
@@ -32,7 +32,7 @@
             <div class="text">ABOUT</div>
           </div></a
         >
-        <a href="/skills.html" class="link"
+        <a href="/skills.html" class="link active-nav"
           ><i class="fas fa-cogs fa-2x"></i>
           <div class="overlay">
             <div class="text">SKILLS</div>
@@ -75,57 +75,51 @@
     </a>
     <div class="container home-page">
       <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
-      <div class="text-zone">
+      <div class="text-zone" style="width: 40vw;">
         <h1 aria-label=" Hi, I’m Simranjeet,web developer." class="blast-root">
-          <span class="blast" style="opacity: 1;">H</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">I</span
-          ><span class="blast" style="opacity: 1;">’</span
-          ><span class="blast" style="opacity: 1;">m</span>
-          <span class="Slast" style="opacity: 1;">S</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">m</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">a</span
-          ><span class="blast" style="opacity: 1;">n</span
-          ><span class="blast" style="opacity: 1; padding-left: 3px;">j</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">t</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">w</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">b</span>
-          <span class="blast" style="opacity: 1;">d</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">v</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">l</span
-          ><span class="blast" style="opacity: 1;">o</span
-          ><span class="blast" style="opacity: 1;">p</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">.</span>
+          <span class="blast" style="opacity: 1; color: #23ffde;">Skills</span>
+          <span class="blast" style="opacity: 1; color: #23ffde;">&</span>
+          <span class="blast" style="opacity: 1; color: #23ffde;"
+            >Experience</span
+          >
         </h1>
-        <h2>Full Stack Developer / Python Programmer / Freelancer</h2>
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/smrnjeet222/">
-            <i class="fab fa-linkedin fa-3x"></i>
-          </a>
-          <a href="https://github.com/smrnjeet222">
-            <i class="fab fa-github fa-3x"></i>
-          </a>
-          <a href="https://leetcode.com/smrnjeet222/">
-            <i class="fa fa-code fa-3x"></i>
-          </a>
-          <a href="https://smrnjeet-22.itch.io/">
-            <i class="fab fa-itch-io fa-3x"></i>
-          </a>
-        </div>
+        <p
+          align="LEFT"
+          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
+        >
+          The main area of my expertise is Web development and Python.<br /><br />
+          Python, HTML, CSS, JS , SASS, Bootstrap, building small and medium web
+          apps with Django & React. | 5⭐ in Problem Solving (Algorithms and
+          Data Structures) on HackerRank.<br /><br />
+          I also have substantial experience in Python, with automation
+          scripts,<br />
+          web scraping and stuff . <br /><br />
+          Visit my
+          <a
+            href="https://www.linkedin.com/in/smrnjeet222"
+            style="color: #23ffde;"
+            >LinkedIn </a
+          >profile for more details or just
+          <a href="/contact.html" style="color: #23ffde;">contact </a>me.
+        </p>
       </div>
 
-      <span class="tags bottom-tags">
+      <!-- _________Bubble___________ -->
+      <div class="skills-charts">
+        <div id="myCanvasContainer">
+          <canvas width="500" height="500" id="myCanvas">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+              <li>Python</li>
+            </ul>
+          </canvas>
+        </div>
+      </div>
+      <!-- _____________END___________ -->
+
+      <span class="tags bottom-tags" style="bottom: 10px;">
         &nbsp;&nbsp;&nbsp;&lt;/body&gt;<br />
         &lt;/html&gt;
       </span>
@@ -144,7 +138,6 @@
         );
       }
     </script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(".blast").mouseover(function () {
