--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>About | Simranjeet Singh </title>
 
     <link rel="icon" href="svgs/icon.png" />
     <link
@@ -12,7 +12,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
     <link type="text/css" media="all" href="style.css" rel="stylesheet" />
-    <!-- <link type="text/css" media="all" href="light.css" rel="stylesheet" /> -->
   </head>
   <body>
     <div id="nav-bar">
@@ -20,7 +19,7 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link"
+        <a href="/" class="link"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
@@ -87,7 +86,7 @@
         </h1>
         <p
           align="LEFT"
-          style="color: aliceblue; width: 70%; font-size: 1rem; margin: 2rem 0;"
+          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
         >
           A skilled and knowledgeable computer science student with extensive
           knowledge of <strong>programming</strong> and
