--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
 
     <link rel="icon" href="svgs/icon.png" />
@@ -20,7 +20,7 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link active-nav"
+        <a href="/" class="link active-nav"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
