--- a/skills.html
+++ b/skills.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Skiils | Simranjeet Singh</title>
 
     <link rel="icon" href="svgs/icon.png" />
     <link
@@ -20,7 +20,7 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link"
+        <a href="/" class="link"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
@@ -75,11 +75,11 @@
     </a>
     <div class="container home-page">
       <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
-      <div class="text-zone" style="width: 40vw;">
+      <div class="text-zone">
         <h1 aria-label=" Hi, I’m Simranjeet,web developer." class="blast-root">
           <span class="blast" style="opacity: 1; color: #23ffde;">Skills</span>
           <span class="blast" style="opacity: 1; color: #23ffde;">&</span>
-          <span class="blast" style="opacity: 1; color: #23ffde;"
+          <span class="blast lnbr" style="opacity: 1; color: #23ffde;"
             >Experience</span
           >
         </h1>
@@ -88,9 +88,9 @@
           style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
         >
           The main area of my expertise is Web development and Python.<br /><br />
-          Python, HTML, CSS, JS , SASS, Bootstrap, building small and medium web
-          apps with Django & React. | 5⭐ in Problem Solving (Algorithms and
-          Data Structures) on HackerRank.<br /><br />
+          Python, HTML, CSS, JS , SASS, Bootstrap, building small and
+          <br />medium web apps with Django & React. | 5⭐ in Problem Solving<br />
+          (Algorithms and Data Structures) on HackerRank.<br /><br />
           I also have substantial experience in Python, with automation
           scripts,<br />
           web scraping and stuff . <br /><br />
@@ -105,18 +105,6 @@
       </div>
 
       <!-- _________Bubble___________ -->
-      <div class="skills-charts">
-        <div id="myCanvasContainer">
-          <canvas width="500" height="500" id="myCanvas">
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JS</li>
-              <li>Python</li>
-            </ul>
-          </canvas>
-        </div>
-      </div>
       <!-- _____________END___________ -->
 
       <span class="tags bottom-tags" style="bottom: 10px;">
