--- a/work.html
+++ b/work.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Projects | Simranjeet Singh</title>
 
     <link rel="icon" href="svgs/icon.png" />
     <link
@@ -20,7 +20,7 @@
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
-        <a href="/index.html" class="link"
+        <a href="/" class="link"
           ><i class="fas fa-home fa-2x"></i>
           <div class="overlay">
             <div class="text">HOME</div>
