--- a/work.html
+++ b/work.html
@@ -11,8 +11,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
-    <link type="text/css" media="all" href="style.css" rel="stylesheet" />
-    <!-- <link type="text/css" media="all" href="light.css" rel="stylesheet" /> -->
+    <link type="text/css" media="all" href="work.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Gloria Hallelujah"
+    />
   </head>
   <body>
     <div id="nav-bar">
@@ -73,55 +76,211 @@
       <img src="svgs/blogdark.png" alt="Resume" />
       <span class="folded-corner"></span>
     </a>
-    <div class="container home-page">
-      <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
-      <div class="text-zone">
-        <h1 aria-label=" Hi, I’m Simranjeet,web developer." class="blast-root">
-          <span class="blast" style="opacity: 1; color: #23ffde;">Comming</span>
-          <span class="blast" style="opacity: 1; color: #23ffde;">Soon</span>
-        </h1>
-        <p
-          align="LEFT"
-          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
-        >
-          As for now u can visit my
+
+    <div class="container">
+      <div class="gallery">
+        <div class="box">
+          <img src="svgs/recipe.jpg" class="image" />
+          <a href="#" class="prj"> Recipe App<span> . js</span> </a>
+          <a href="https://github.com/smrnjeet222/recipe-app" class="show1"
+            >Github</a
+          >
+          <a href="https://smrnjeet222.github.io/recipe-app/" class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img src="svgs/blog.jpg" class="image" />
+          <a class="prj"> Django Blog<span> . py</span> </a>
+          <a href="https://github.com/smrnjeet222/Django_Blog" class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://smrnjeetblogs.herokuapp.com/" class="show2">Visit</a>
+        </div>
+
+        <div class="box">
+          <img src="svgs/portfolio.png" class="image" />
+          <a class="prj"> Old Portfolio<span> . js</span> </a>
+          <a href="https://github.com/smrnjeet222/Portfolio" class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://smrnjeet222.github.io/Portfolio/" class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Python_Apps/master/Snake/Extras/play.png"
+            class="image"
+          />
+          <a class="prj"> Snake Game<span> . py</span> </a>
           <a
-            href="https://smrnjeet222.github.io/Projects/"
-            style="color: #23ffde;"
-            >old site</a
-          >.
-        </p>
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Snake"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Snake"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img src="svgs/Automail.png" class="image" />
+          <a class="prj"> AutoMail<span> . py</span> </a>
+          <a href="https://github.com/smrnjeet222/AutoMail" class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://github.com/smrnjeet222/AutoMail" class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Unity_Gamedevelopment/master/FreakyFrog/best.png"
+            class="image"
+          />
+          <a class="prj"> Freaky Frog<span> . C#</span> </a>
+          <a
+            href="https://smrnjeet222.github.io/Unity_Gamedevelopment/"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://smrnjeet-22.itch.io/freaky-frog" class="show2"
+            >Visit</a
+          >
+        </div>
+
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Python_Apps/master/SudokuSolver/2.png"
+            class="image"
+          />
+          <a class="prj"> Sudoku Solver<span> . py</span> </a>
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/SudokuSolver"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/SudokuSolver"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Python_Apps/master/Space-invaders/Sc.jpg"
+            class="image"
+          />
+          <a class="prj"> Space-invaders<span> . py</span> </a>
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Space-invaders"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Space-invaders"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Visualisations/master/Astar.png"
+            class="image"
+          />
+          <a class="prj"> A*Pathfinding<span> . py</span> </a>
+          <a href="https://github.com/smrnjeet222/Visualisations" class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://github.com/smrnjeet222/Visualisations" class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Python_Apps/master/Rock-Paper-Scissors/demo.jpg"
+            class="image"
+          />
+          <a class="prj"> Multiplayer R.P.S<span> . py</span> </a>
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Rock-Paper-Scissors"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/Rock-Paper-Scissors"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+
+        <div class="box">
+          <img src="svgs/Rc.png" class="image" />
+          <a class="prj"> Ray Casting<span> . js</span> </a>
+          <a
+            href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://editor.p5js.org/smrnjeet222/sketches/j06TXs4ZF"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img src="svgs/covid.png" class="image" />
+          <a class="prj"> Python Apps<span> . py</span> </a>
+          <a href="https://github.com/smrnjeet222/Python_Apps" class="show1"
+            >GiTHUB</a
+          >
+          <a href="https://github.com/smrnjeet222/Python_Apps" class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img src="svgs/bubblesort.png" class="image" />
+          <a class="prj"> Visualisations<span> . js</span> </a>
+          <a
+            href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
+            class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://editor.p5js.org/smrnjeet222/sketches/T0o5woDT5"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/BLENDER/master/Abstract_Design/Abstract.png"
+            class="image"
+          />
+          <a class="prj"> Blender<span> . models</span> </a>
+          <a href="https://smrnjeet222.github.io/BLENDER/" class="show1"
+            >GiTHUB</a
+          >
+          <a
+            href="https://editor.p5js.org/smrnjeet222/sketches/T0o5woDT5"
+            class="show2"
+            >Visit</a
+          >
+        </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/Unity_Gamedevelopment/master/MYGAME.png"
+            class="image"
+          />
+          <a class="prj"> Unity Games<span> . C#</span> </a>
+          <a href="https://smrnjeet-22.itch.io/" class="show1">GiTHUB</a>
+          <a href="https://smrnjeet-22.itch.io/" class="show2">Visit</a>
+        </div>
       </div>
-      <span class="tags bottom-tags" style="bottom: 10px;">
-        &nbsp;&nbsp;&nbsp;&lt;/body&gt;<br />
-        &lt;/html&gt;
-      </span>
     </div>
-    <script>
-      if (window.matchMedia("(min-width: 800px)").matches) {
-        function getRandomInt(min, max) {
-          min = Math.ceil(min);
-          max = Math.floor(max);
-          return Math.floor(Math.random() * (max - min)) + min; // The maximum is exclusive and the minimum is inclusive
-        }
-        document.write(
-          '<div id="mysvg"><img alt="hacker" src="svgs/code' +
-            getRandomInt(1, 8) +
-            '.svg"></div>'
-        );
-      }
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>
-      $(".blast").mouseover(function () {
-        $(this).addClass("animated rubberBand");
-      });
-      $(".blast").mouseleave(function () {
-        var th = $(this);
-        setTimeout(function () {
-          th.removeClass("animated rubberBand");
-        }, 1000);
-      });
-    </script>
   </body>
 </html>
