--- a/work.html
+++ b/work.html
@@ -93,7 +93,7 @@
           <img src="svgs/blog.jpg" class="image" />
           <a class="prj"> Django Blog<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/Django_Blog" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://smrnjeetblogs.herokuapp.com/" class="show2">Visit</a>
         </div>
@@ -102,7 +102,7 @@
           <img src="svgs/portfolio.png" class="image" />
           <a class="prj"> Old Portfolio<span> . js</span> </a>
           <a href="https://github.com/smrnjeet222/Portfolio" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://smrnjeet222.github.io/Portfolio/" class="show2"
             >Visit</a
@@ -117,7 +117,7 @@
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Snake"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Snake"
@@ -129,7 +129,7 @@
           <img src="svgs/Automail.png" class="image" />
           <a class="prj"> AutoMail<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/AutoMail" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://github.com/smrnjeet222/AutoMail" class="show2"
             >Visit</a
@@ -144,7 +144,7 @@
           <a
             href="https://smrnjeet222.github.io/Unity_Gamedevelopment/"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://smrnjeet-22.itch.io/freaky-frog" class="show2"
             >Visit</a
@@ -160,7 +160,7 @@
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/SudokuSolver"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/SudokuSolver"
@@ -178,7 +178,7 @@
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Space-invaders"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Space-invaders"
@@ -194,7 +194,7 @@
           />
           <a class="prj"> A*Pathfinding<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/Visualisations" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://github.com/smrnjeet222/Visualisations" class="show2"
             >Visit</a
@@ -209,7 +209,7 @@
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Rock-Paper-Scissors"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://github.com/smrnjeet222/Python_Apps/tree/master/Rock-Paper-Scissors"
@@ -224,7 +224,7 @@
           <a
             href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://editor.p5js.org/smrnjeet222/sketches/j06TXs4ZF"
@@ -236,7 +236,7 @@
           <img src="svgs/covid.png" class="image" />
           <a class="prj"> Python Apps<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/Python_Apps" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a href="https://github.com/smrnjeet222/Python_Apps" class="show2"
             >Visit</a
@@ -248,7 +248,7 @@
           <a
             href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
             class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://editor.p5js.org/smrnjeet222/sketches/T0o5woDT5"
@@ -263,7 +263,7 @@
           />
           <a class="prj"> Blender<span> . models</span> </a>
           <a href="https://smrnjeet222.github.io/BLENDER/" class="show1"
-            >GiTHUB</a
+            >Github</a
           >
           <a
             href="https://editor.p5js.org/smrnjeet222/sketches/T0o5woDT5"
@@ -277,7 +277,7 @@
             class="image"
           />
           <a class="prj"> Unity Games<span> . C#</span> </a>
-          <a href="https://smrnjeet-22.itch.io/" class="show1">GiTHUB</a>
+          <a href="https://smrnjeet-22.itch.io/" class="show1">Github</a>
           <a href="https://smrnjeet-22.itch.io/" class="show2">Visit</a>
         </div>
       </div>
