--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
     <link type="text/css" media="all" href="style.css" rel="stylesheet" />
-    <!-- <link type="text/css" media="all" href="light.css" rel="stylesheet" /> -->
+    <style>
+      @media (max-width: 767px) {
+        .home-page h1:after {
+          margin-left: -50px;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="nav-bar">
