--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
-    <title>About | Simranjeet Singh </title>
+    <title>About | Simranjeet Singh</title>
 
     <link rel="icon" href="svgs/icon.png" />
     <link
@@ -84,10 +84,7 @@
           <span class="blast" style="opacity: 1; color: #23ffde;">m</span
           ><span class="blast" style="opacity: 1; color: #23ffde;">e</span>
         </h1>
-        <p
-          align="LEFT"
-          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
-        >
+        <p align="LEFT">
           A skilled and knowledgeable computer science student with extensive
           knowledge of <strong>programming</strong> and
           <strong>computer applications</strong> . 👨‍💻<br /><br />
