--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,7 @@
           <span class="blast" style="opacity: 1; color: #23ffde;">m</span
           ><span class="blast" style="opacity: 1; color: #23ffde;">e</span>
         </h1>
-        <p
-          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
-        >
+        <p>
           I am interested in freelance opportunities – especially ambitious or
           large projects. However, if you have other request or question, don’t
           hesitate to contact me using below form either.
@@ -167,7 +165,8 @@
               color: aliceblue;
               width: 50%;
               font-size: 1em;
-              transform: translateY(-4vh);
+              margin: 1% 0;
+              transform: translateY(-40px);
             "
           >
             Or you can just mail me at ~
