--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
     />
     <link type="text/css" media="all" href="style.css" rel="stylesheet" />
     <style>
-      @media (max-width: 767px) {
+      @media (min-height: 569px) and (max-width: 767px) {
         .home-page h1:after {
           margin-left: -50px;
         }
@@ -89,10 +89,7 @@
             >Experience</span
           >
         </h1>
-        <p
-          align="LEFT"
-          style="color: aliceblue; width: 80%; font-size: 1rem; margin: 2rem 0;"
-        >
+        <p align="LEFT">
           The main area of my expertise is Web development and Python.<br /><br />
           Python, HTML, CSS, JS , SASS, Bootstrap, building small and
           <br />medium web apps with Django & React. | 5⭐ in Problem Solving<br />
