--- a/about.html
+++ b/about.html
@@ -88,8 +88,10 @@
           A skilled and knowledgeable computer science student with extensive
           knowledge of <strong>programming</strong> and
           <strong>computer applications</strong> . 👨‍💻<br /><br />
-          Well-organised enthusiastic person, problem solver and, a fan of
-          music, Outdoor Sports, TV series and, recently, Gaming.<br /><br />
+          Well-organised enthusiastic person, problem solver, quick learner,
+          debugger and,<br />
+          a fan of " The Office ", Outdoor Sports, TV series, Music, and
+          recently, Gaming.<br /><br />
           Interested in the development spectrum and actively looking for an
           opportunity in the field of Software Engineering.<br /><br />
           Follow me on
